[tool.poetry]
name = "z3"
version = "0.1.4"
description = "Super simple Python AWS S3 Client"
authors = ["buzzni-wilson <wilson@buzzni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.12.2"
boto3 = ">=1.35.16,<1.35.37"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
moto = "^5.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
